--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
     <section class="container mb-5">
         <h2 class="text-center mb-4 text-accent border-bottom pb-2">Skills Stack</h2>
         <div class="d-flex flex-wrap justify-content-center gap-3">
-            <span class="skill-badge bg-primary">Python (ML/Data Science)</span>
+            <span class="skill-badge bg-primary">Python (ML)</span>
             <span class="skill-badge bg-primary">PHP (Server-Side Logic)</span>
-            <span class="skill-badge bg-secondary">Java (MCA Focus)</span>
+            <span class="skill-badge bg-secondary">Java </span>
             <span class="skill-badge bg-success">MySQL (DB Management)</span>
-            <span class="skill-badge bg-info">Bootstrap (Responsive Design)</span>
-            <span class="skill-badge bg-warning text-dark">HTML/CSS/JS</span>
+     
+            <span class="skill-badge bg-warning text-dark">HTML/CSS/JS/Bootstrap (Responsive Design)</span>
         </div>
     </section>
     
