--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
         <h1 class="display-3 fw-bold mb-1 font-monospace text-accent">SAITEJ BABU PARAB</h1>
         <p class="lead text-secondary mb-4">
-            A motivated MCA candidate and **full-stack web development** enthusiast, eager to apply **robust problem-solving abilities** and technical skills.
+            A motivated MCA candidate and <strong>full-stack web development</strong> enthusiast, eager to apply <strong>robust problem-solving abilities</strong> and technical skills.
         </p>
 
         <div class="d-flex justify-content-center gap-3">
@@ -205,7 +205,7 @@
                 <div class="card h-100 bg-dark-secondary border-primary shadow-lg">
                     <div class="card-body">
                         <h5 class="card-title font-monospace text-success">Intelligent Movie Recommendation System</h5>
-                        <p class="card-text text-secondary">An end-to-end engine built with **Python** and **Streamlit**. Utilizes **Scikit-Learn** for vectorization and **Cosine Similarity** algorithms on 5,000+ movies.</p>
+                        <p class="card-text text-secondary">An end-to-end engine built with <strong>Python</strong> and <strong>Streamlit</strong>. Utilizes <strong>Scikit-Learn</strong> for vectorization and <strong>Cosine Similarity</strong> algorithms on 5,000+ movies.</p>
                         <span class="badge bg-primary">Python | Streamlit | Scikit-Learn</span>
                     </div>
                     <div class="card-footer bg-transparent border-top-0 pt-0">
@@ -220,7 +220,7 @@
                 <div class="card h-100 bg-dark-secondary border-warning shadow-lg">
                     <div class="card-body">
                         <h5 class="card-title font-monospace text-warning">Movie Theater Management System</h5>
-                        <p class="card-text text-secondary">A comprehensive web app managing online booking, seat selection, and show time management. Built using traditional **PHP** and **MySQL**.</p>
+                        <p class="card-text text-secondary">A comprehensive web app managing online booking, seat selection, and show time management. Built using traditional <strong>PHP</strong> and <strong>MySQL</strong>.</p>
                         <span class="badge bg-primary">PHP | MySQL | Bootstrap</span>
                     </div>
                     <div class="card-footer bg-transparent border-top-0 pt-0">
@@ -235,7 +235,7 @@
                 <div class="card h-100 bg-dark-secondary border-warning shadow-lg">
                     <div class="card-body">
                         <h5 class="card-title font-monospace text-warning">Pet Adoption System</h5>
-                        <p class="card-text text-secondary">A **PHP**-based platform for connecting adopters with pets, using **MySQL** and a responsive front-end. Allows users to browse and submit adoption applications.</p>
+                        <p class="card-text text-secondary">A <strong>PHP</strong>-based platform for connecting adopters with pets, using <strong>MySQL</strong> and a responsive front-end. Allows users to browse and submit adoption applications.</p>
                         <span class="badge bg-primary">PHP | MySQL | HTML/CSS</span>
                     </div>
                     <div class="card-footer bg-transparent border-top-0 pt-0">
@@ -258,7 +258,7 @@
                 <div class="card bg-dark-secondary border-info h-100">
                     <div class="card-body">
                         <h5 class="card-title font-monospace text-info">🥋 The Discipline of Code: Defense Artists</h5>
-                        <p class="card-text text-secondary">Certified **Meritorious Sportsperson** and **Black Belt Practitioner**. This personal project showcases discipline, mentorship, and links to reels/achievements certified by the **Traditional Karate Association Goa**.</p>
+                        <p class="card-text text-secondary">Certified <strong>Meritorious Sportsperson</strong> and <strong>Black Belt Practitioner</strong>. This personal project showcases discipline, mentorship, and links to reels/achievements certified by the **Traditional Karate Association Goa**.</p>
                         <a href="https://defenceartists.netlify.app/" target="_blank" class="btn btn-info w-100">
                             View Karate Site & Achievements
                         </a>
@@ -270,7 +270,7 @@
                 <div class="card bg-dark-secondary border-light h-100">
                     <div class="card-body">
                         <h5 class="card-title font-monospace text-light">Responsive Layout Example</h5>
-                        <p class="card-text text-secondary">A quick project demonstrating fundamental proficiency in **HTML, CSS, and JavaScript** for creating fully responsive web pages.</p>
+                        <p class="card-text text-secondary">A quick project demonstrating fundamental proficiency in <strong>HTML, CSS, and JavaScript</strong> for creating fully responsive web pages.</p>
                         <a href="https://saitejparab.netlify.app/" target="_blank" class="btn btn-light w-100">
                             View Frontend Fundamentals
                         </a>
