--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#experience">Timeline</a>
+                        <a class="nav-link" href="#experience">Experience & Education</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#projects">Projects</a>
