--- a/index.html
+++ b/index.html
@@ -155,10 +155,9 @@
         <div class="d-flex flex-wrap justify-content-center gap-3">
             <span class="skill-badge bg-primary">Python (ML/Data Science)</span>
             <span class="skill-badge bg-primary">PHP (Server-Side Logic)</span>
-            <span class="skill-badge bg-secondary">Java (MCA Focus)</span>
+            <span class="skill-badge bg-secondary">Java </span>
             <span class="skill-badge bg-success">MySQL (DB Management)</span>
-            <span class="skill-badge bg-info">Bootstrap (Responsive Design)</span>
-            <span class="skill-badge bg-warning text-dark">HTML/CSS/JS</span>
+            <span class="skill-badge bg-info">HTML/CSS/JS/Bootstrap</span>
         </div>
     </section>
     
