--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
         <h1 class="display-3 fw-bold mb-1 font-monospace text-accent">SAITEJ BABU PARAB</h1>
         <p class="lead text-secondary mb-4">
-            A motivated MCA candidate and <strong>full-stack web development</strong> enthusiast, eager to apply <strong>robust problem-solving abilities</strong> and technical skills.
+            A motivated MCA candidate and <strong>full-stack development</strong> enthusiast, eager to apply <strong>robust problem-solving abilities</strong> and technical skills.
         </p>
 
         <div class="d-flex justify-content-center gap-3">
